Style fix for the z-index issue of the dialog background. (#293)
Issue: KAAV-108

--- a/src/components/common/Common.scss
+++ b/src/components/common/Common.scss
@@ -110,6 +110,9 @@ h4 {
 .ui.form .field {
   margin: 0 0 $size32;
 }
+.ui.dimmer {
+  z-index: $z-index-bg-dimmer;
+}
 
 ul {
   &::-webkit-scrollbar-track {
