--- a/src/components/common/colors.scss
+++ b/src/components/common/colors.scss
@@ -164,3 +164,4 @@ $size64:4rem;
 $size72:4.5rem;
 
 $z-index-sticky: 1100;
+$z-index-bg-dimmer: 1200;
